--- a/src/app/member/components/member-details/member-details.component.html
+++ b/src/app/member/components/member-details/member-details.component.html
@@ -639,6 +639,52 @@
           Aucune information d'inscription disponible pour ce membre.
         </div>
       </ng-template>
+
+      <hr class="my-4">
+      <h4 class="mb-3 text-primary">Nouvelle Réinscription pour {{ member.personalInfo.firstname }} {{ member.personalInfo.name }}</h4>
+      <button class="btn btn-outline-success mb-3" *ngIf="!showReenrollmentForm" (click)="toggleReenrollmentForm()">
+        <i class="bi bi-person-plus-fill"></i> Lancer une réinscription
+      </button>
+
+      <div *ngIf="showReenrollmentForm" class="card p-4 shadow-sm">
+        <form [formGroup]="reinscriptionForm" novalidate (ngSubmit)="onReEnrollSubmit()">
+          <div class="row gx-4 gy-3">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="reinscriptionSession" class="form-label">Session de Réinscription</label>
+                <select id="reinscriptionSession" formControlName="session" class="form-control form-select-custom"
+                        [ngClass]="{ 'is-invalid': reinscriptionForm.get('session')?.invalid && reinscriptionForm.get('session')?.touched }">
+                  <option value="">Sélectionner une session</option>
+                  <option *ngFor="let session of availableSessions" [value]="session.id">{{ session.session }}</option>
+                </select>
+                <div *ngIf="reinscriptionForm.get('session')?.invalid && reinscriptionForm.get('session')?.touched"
+                     class="invalid-feedback">
+                  Veuillez sélectionner une session.
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="form-group">
+                <label class="form-label">Statut du Paiement</label>
+                <div class="form-check form-switch form-switch-custom d-inline-block ms-3">
+                  <input class="form-check-input" type="checkbox" id="reinscriptionStatusPayment" formControlName="statusPayment" role="switch">
+                  <label class="form-check-label" for="reinscriptionStatusPayment">Payé</label>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex justify-content-end mt-4">
+            <button class="btn btn-success me-2" type="submit" [disabled]="reinscriptionForm.invalid">
+              <i class="bi bi-floppy2"></i> Enregistrer la réinscription
+            </button>
+            <button class="btn btn-secondary" type="button" (click)="cancelReenrollment()">
+              Annuler
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 
